--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "overrides": {
     "react": "$react",
     "react-dom": "$react-dom",
-    "next": "$next"
+    "next": "$next",
+    "@types/react": "19.1.2",
+    "@types/react-dom": "19.1.2"
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.0",
@@ -23,11 +25,12 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.487.0",
-    "next": "15.2.4",
+    "markdown-it": "^14.1.0",
+    "next": "^15.4.0-canary.10",
     "next-auth": "^5.0.0-beta.25",
     "next-sanity": "^9.8.58-canary.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "sanity": "^3.85.1",
     "sanity-plugin-markdown": "^5.1.0",
     "server-only": "^0.0.1",
@@ -39,11 +42,12 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/markdown-it": "^14.1.2",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "19.1.2",
+    "@types/react-dom": "19.1.2",
     "eslint": "^9",
-    "eslint-config-next": "15.2.4",
+    "eslint-config-next": "15.3.1",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
