--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.85.1",
     "@tailwindcss/typography": "^0.5.16",
+    "@uiw/react-md-editor": "^4.0.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.487.0",
@@ -29,11 +30,14 @@
     "next": "^15.4.0-canary.10",
     "next-auth": "^5.0.0-beta.25",
     "next-sanity": "^9.8.58-canary.0",
+    "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "sanity": "^3.85.1",
     "sanity-plugin-markdown": "^5.1.0",
     "server-only": "^0.0.1",
+    "slugify": "^1.6.6",
+    "sonner": "^2.0.3",
     "styled-components": "^6.1.17",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
