--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-slot": "^1.2.0",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.85.1",
+    "@sentry/nextjs": "^9.14.0",
     "@tailwindcss/typography": "^0.5.16",
     "@uiw/react-md-editor": "^4.0.5",
     "class-variance-authority": "^0.7.1",
